# Ockham

./: CMakeLists.txt
assets/shaders/: simple_shader.vert
src/: main.cpp
src/core/: Engine.cpp  Engine.h  Window.cpp  Window.h
src/graphics/: Model.cpp  Model.h  Renderer.cpp  Renderer.h
src/graphics/backend/: Pipeline.cpp  Pipeline.h  Swapchain.cpp  Swapchain.h  VulkanContext.cpp  VulkanContext.h
